# dgraphai

./: .env.example  .gitignore  ARCHITECTURE.md  BILLION_DOLLAR_GAP.md  Dockerfile  PLATFORM_GAPS.md  README.md  VALUATION_GAP_ANALYSIS.md  WIZ_UX_ANALYSIS.md  agent_live.err  agent_test_key.txt  alembic.ini  api.err  check_inventory.py  check_tenant.py  clear_neo4j.py  docker-compose.yml  inspect_full.py  inspect_graph.py  main.py  neil_agent.err  neil_agent_key.txt  pyproject.toml  pytest.ini  test_agent_e2e.py  test_connector_assign.py  test_explore_query.py  test_neo4j_counts.py  test_small_connector.py  validate_all.py
.github/workflows/: release-agent.yml  release.yml
agent-go/: .goreleaser.yml  Dockerfile  go.mod  go.sum
agent-go/cmd/dgraph-agent/: main.go
agent-go/cmd/dgraph-gateway/: main.go
agent-go/cmd/dgraph-ingest/: main.go
agent-go/internal/backend/: graph.go
agent-go/internal/classify/: classify.go
agent-go/internal/config/: config.go
agent-go/internal/connector/: connector.go  connector_test.go  local.go  s3.go  smb.go
agent-go/internal/enricher/: README.md  enricher_test.go  local_enricher.go  subprocess.go
agent-go/internal/fleet/: fleet.go
agent-go/internal/platform/: client.go
agent-go/internal/queue/: sqlite.go
agent-go/internal/sync/: client.go
agent-go/test_path/: main.go
alembic/: env.py
alembic/versions/: 0001_initial_schema.py  0002_add_missing_tables.py  0003_add_missing_user_columns.py  0004_agent_heartbeat_columns.py
charts/dgraph-agent/: Chart.yaml  values.yaml
charts/dgraphai/: Chart.yaml  values.yaml
charts/dgraphai/templates/: enrichment-worker-deployment.yaml
deploy/: install-windows.ps1
deploy/airgapped/: bundle-manifest.yaml  values-airgapped.yaml
deploy/airgapped/scripts/: install.sh
deploy/aws/: values-aws.yaml
deploy/azure/: values-azure.yaml
deploy/gcp/: values-gcp.yaml
deploy/onprem/: values-onprem.yaml
dgraph-proxy/: .goreleaser.yml  Dockerfile  README.md  go.mod
dgraph-proxy/cmd/dgraph-proxy/: main.go
dgraph-proxy/internal/api/: server.go
dgraph-proxy/internal/config/: config.go
dgraph-proxy/internal/delta/: protocol.go
dgraph-proxy/internal/query/: engine.go
dgraph-proxy/internal/store/: store.go
dgraph-proxy/internal/sync/: syncer.go
enricher-rs/: .goreleaser.yml  Cargo.toml
enricher-rs/src/: main.rs
enricher-rs/src/parsers/: binary_parser.rs
enricher-rs/src/scanners/: mod.rs  pii_scanner.rs  secret_scanner.rs
k8s/: api-deployment.yaml  ingress.yaml  keycloak.yaml  namespace.yaml  scanner-agent-deployment.yaml  secrets-template.yaml
proto/: enrichment.proto  graph.proto  ingest.proto
scanner-agent/: DEPRECATED.md  Dockerfile
scanner-agent/src/: main.py
scanner-agent/src/connectors/: base.py  local.py  smb.py
scanner-agent/src/sync/: client.py
scripts/: local_setup.ps1
sdk/python/: pyproject.toml
sdk/python/dgraphai/: __init__.py  async_client.py  client.py
sdk/typescript/: package.json
sdk/typescript/src/: index.ts
src/: main.py
src/dgraphai/: cli.py
src/dgraphai/alerts/: engine.py
src/dgraphai/api/: agent.py  alerts.py  auth.py  compliance.py  connectors.py  connectors_full.py  fleet.py  graph.py  graph_intelligence.py  indexer.py  inventory.py  inventory_search.py  license.py  mounts.py  notifications.py  proxy_sync.py  queries.py  scan_schedule.py  scanner.py  schema.py  search.py  settings.py  stream.py  usage.py  users.py  workflows.py
src/dgraphai/auth/: audit.py  email.py  keycloak_setup.py  local.py  oidc.py  saml.py  scim.py
src/dgraphai/compliance/: reports.py
src/dgraphai/connectors/: gcs.py  sdk.py  sharepoint.py
src/dgraphai/db/: alert_models.py  connector_models.py  models.py  query_models.py  session.py
src/dgraphai/graph/: circuit_breaker.py  client.py  dedup.py
src/dgraphai/graphql/: schema.py
src/dgraphai/inventory/: BACKLOG.md  __init__.py  taxonomy.py
src/dgraphai/licensing/: keygen.py  license.py  metering.py
src/dgraphai/middleware/: rate_limit.py
src/dgraphai/mounts/: manager.py
src/dgraphai/observability/: custom_metrics.py  metrics.py
src/dgraphai/rbac/: engine.py
src/dgraphai/scanner/: protocol.py
src/dgraphai/streaming/: formats.py  router.py
src/dgraphai/tasks/: __init__.py  alerts.py  celery_app.py  cve_sync.py  enrichment_tasks.py  gdpr.py  indexer.py  maintenance.py  onboarding.py  reenrichment.py
src/dgraphai/webhooks/: outbound.py
terraform/: main.tf  variables.tf
terraform/scripts/: write_env.py
tests/: check_search.py  conftest.py  run_tests.sh
tests/e2e/: test_api_health.py  test_auth_p0.py  test_compliance_p1.py  test_connectors_p0.py  test_full_customer_flow.py  test_graphql_p1.py  test_inventory_p1.py  test_streaming_p2.py  test_usage_billing_p0.py  test_workflows_p1.py
tests/fixtures/: seed_graph.py
tests/integration/: test_indexer_pipeline.py
tests/unit/: test_enterprise_blockers.py  test_graph_schema.py  test_hard_blockers.py  test_inventory_taxonomy.py  test_licensing.py  test_metadata_extractor.py  test_nl_search.py  test_rbac.py  test_security_architecture.py
web/: package-lock.json  package.json  vite.config.ts  vite.err
web/scripts/: generate-palette.mjs
web/src/: App.tsx  index.css  main.tsx
web/src/lib/: api.ts  (+3 more)
(+104 files in other folders)
