[project]
name = "dgraphai"
version = "0.1.0"
description = "Official Python SDK for dgraph.ai — Enterprise Filesystem Knowledge Graph"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "dgraph.ai", email = "sdk@dgraph.ai" }]
keywords = ["graph", "knowledge-graph", "security", "data-inventory", "ai"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "httpx>=0.25.0",
]

[project.optional-dependencies]
async = ["httpx[asyncio]>=0.25.0"]
dev   = ["pytest>=8.0", "pytest-asyncio>=0.24", "respx>=0.20"]

[project.urls]
Homepage    = "https://dgraph.ai"
Repository  = "https://github.com/gaineyllc/dgraphai/tree/main/sdk/python"
Docs        = "https://docs.dgraph.ai/sdk/python"
"Bug Tracker" = "https://github.com/gaineyllc/dgraphai/issues"
